--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/symfony": ">=2.1,<2.3-dev",
+        "symfony/symfony": ">=2.1",
         "friendsofsymfony/user-bundle": "dev-master"
     },
     "autoload": {
